--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,7 @@ GOSH           = "@GOSH@"
 INSTALL        = "@GAUCHE_INSTALL@" -C
 
 # Other parameters
+EXEEXT = @EXEEXT@
 LOCAL_PATHS = "@LOCAL_PATHS@"
 
 # Module-specific stuff
@@ -28,11 +29,20 @@ GAUCHE_PKGINCDIR  = "$(DESTDIR)@GAUCHE_PKGINCDIR@"
 GAUCHE_PKGLIBDIR  = "$(DESTDIR)@GAUCHE_PKGLIBDIR@"
 GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
+.PHONY: standalone
+
 all :
+
+standalone : 
 
 check : all
 	@rm -f test.log
 	$(GOSH) -I. -I$(srcdir) $(srcdir)/test.scm > test.log
+
+standalone : aaron-asm$(EXEEXT)
+
+aaron-asm$(EXEEXT) : $(SCMFILES)
+	gosh build-standalone -o aaron-asm $^
 
 install : all
 	$(INSTALL) -m 444 -T $(GAUCHE_PKGLIBDIR) $(SCMFILES)
