--- a/Makefile.in
+++ b/Makefile.in
@@ -29,7 +29,7 @@ GAUCHE_PKGINCDIR  = "$(DESTDIR)@GAUCHE_PKGINCDIR@"
 GAUCHE_PKGLIBDIR  = "$(DESTDIR)@GAUCHE_PKGLIBDIR@"
 GAUCHE_PKGARCHDIR = "$(DESTDIR)@GAUCHE_PKGARCHDIR@"
 
-.PHONY: standalone
+.PHONY: standalone standalone-install standalone-uninstall
 
 all :
 
@@ -44,6 +44,12 @@ standalone : aaron-asm$(EXEEXT)
 aaron-asm$(EXEEXT) : $(SCMFILES)
 	gosh build-standalone -o aaron-asm $^
 
+standalone-install : aaron-asm$(EXEEXT)
+	$(INSTALL) -m 444 -T "$(bindir)" $<
+
+standalone-uninstall :
+	$(INSTALL) -U "$(bindir)" aaron-asm$(EXEEXT)
+
 install : all
 	$(INSTALL) -m 444 -T $(GAUCHE_PKGLIBDIR) $(SCMFILES)
 	$(INSTALL) -m 444 -T $(GAUCHE_PKGLIBDIR)/.packages $(PACKAGE).gpd
@@ -53,7 +59,7 @@ uninstall :
 	$(INSTALL) -U $(GAUCHE_PKGLIBDIR)/.packages $(PACKAGE).gpd
 
 clean :
-	rm -rf core $(TARGET) *~ test.log so_locations
+	rm -rf aaron-asm$(EXEEXT) core *~ test.log so_locations
 
 distclean : clean
 	rm -rf $(CONFIG_GENERATED)
